manifests/oidc-client-debugger/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oidc-client-debugger-git
  annotations:
    alpha.image.policy.openshift.io/resolve-names: '*'
    app.openshift.io/route-disabled: 'false'
    app.openshift.io/vcs-ref: ''
    app.openshift.io/vcs-uri: https://github.com/francescopezzulli/oidc-client-debugger.git
    image.openshift.io/triggers: >-
      [{"from":{"kind":"ImageStreamTag","name":"oidc-client-debugger-git:latest","namespace":"francesco-onboarding"},"fieldPath":"spec.template.spec.containers[?(@.name==\"oidc-client-debugger-git\")].image","paused":false}]
  labels:
    app: oidc-client-debugger-git
    app.kubernetes.io/component: oidc-client-debugger-git
    app.kubernetes.io/instance: oidc-client-debugger-git
    app.kubernetes.io/name: oidc-client-debugger-git
    app.kubernetes.io/part-of: oidc-client-debugger-git-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-17-ubi8
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oidc-client-debugger-git
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
  template:
    metadata:
      labels:
        app: oidc-client-debugger-git
        deployment: oidc-client-debugger-git
    spec:
      containers:
        - name: oidc-client-debugger-git
          image: image-registry.openshift-image-registry.svc:5000/francesco-onboarding/oidc-client-debugger-git:latest
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          imagePullPolicy: Always
          resources: {}
