manifests/oidc-client-debugger/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: oidc-client-debugger-git
  namespace: francesco-onboarding
  labels:
    app: oidc-client-debugger-git
    app.kubernetes.io/component: oidc-client-debugger-git
    app.kubernetes.io/instance: oidc-client-debugger-git
    app.kubernetes.io/name: oidc-client-debugger-git
    app.kubernetes.io/part-of: oidc-client-debugger-git-app
spec:
  selector:
    app: oidc-client-debugger-git
  ports:
    - name: 9000-tcp
      port: 9000
      targetPort: 9000
      protocol: TCP
