manifests/oidc-client-debugger/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: oidc-client-debugger-git
  namespace: francesco-onboarding
  labels:
    app: oidc-client-debugger-git
    app.kubernetes.io/component: oidc-client-debugger-git
    app.kubernetes.io/instance: oidc-client-debugger-git
    app.kubernetes.io/name: oidc-client-debugger-git
    app.kubernetes.io/part-of: oidc-client-debugger-git-app
spec:
  to:
    kind: Service
    name: oidc-client-debugger-git
    weight: 100
  port:
    targetPort: 8080-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
